sniff/cli/tests/snapshots/snapshots__cargo_monorepo_structure_json.snap
---
source: sniff/cli/tests/snapshots.rs
expression: stable_topology_json(&json)
---
{
  "is_monorepo": true,
  "monorepo_layers": [
    {
      "authority": "cargo-workspace",
      "orchestrators": [],
      "packages": [
        "pkg-a",
        "pkg-b"
      ],
      "provenance": "globbed"
    }
  ],
  "monorepo_standards": [
    {
      "confidence": "marker-confirmed",
      "standard": "cargo-workspace"
    }
  ],
  "package_count": 2
}
