sniff/cli/tests/snapshots/snapshots__cargo_monorepo_structure_text.snap
---
source: sniff/cli/tests/snapshots.rs
expression: "normalize_snapshot_paths(&stdout, &path)"
---

Repository (cargo / 2 packages)

- (root)
    - pkg-a v0.1.0 (pkg-a) [Rust]
    - pkg-b v0.1.0 (pkg-b) [Rust]
