sniff/cli/tests/snapshots/snapshots__cargo_pnpm_monorepo_structure_text.snap
---
source: sniff/cli/tests/snapshots.rs
expression: "normalize_snapshot_paths(&stdout, &path)"
---

Repository (2 layers)

- Cargo Workspace — 2 packages
- pnpm Workspaces — 2 packages
- root
    - js-a v0.1.0 (js-a)
    - js-b v0.1.0 (js-b)
    - rust-a v0.1.0 (rust-a) [Rust]
    - rust-b v0.1.0 (rust-b) [Rust]
