sniff/cli/tests/snapshots/snapshots__help_output.snap
---
source: sniff/cli/tests/snapshots.rs
expression: "normalize_text(&run_stdout(&[\"--help\"]))"
---
sniff 0.1.0
Detect system and repository information

Usage: sniff [OPTIONS] [COMMAND]

  -b, --base <BASE>  Base directory for filesystem analysis
      --json         Output as JSON instead of text (with subcommand) or force JSON (no subcommand)
      --deep         Enable deep git inspection (queries remotes for branch info)
  -v, --verbose...   Increase output verbosity
  -h, --help         Print help
  -V, --version      Print version


Commands:
  Top-level sections:
    sniff os          Show only OS information
    sniff hardware    Show only hardware information
    sniff network     Show only network information
    sniff filesystem  Show only filesystem information
    sniff topics      Show subsection topics as a table
    sniff structure   Show a structural overview of sniff output

  Hardware details:
    sniff cpu             Show only CPU information
    sniff gpu             Show only GPU information
    sniff memory          Show only memory information
    sniff storage         Show only storage/disk information
    sniff audio-devices   Show only audio devices

  Filesystem details:
    sniff git                        Show only git repository information
    sniff git origin                 Inspect the 'origin' remote
    sniff git owner/repo             Inspect by owner/repo shorthand
    sniff git https://github.com/... Inspect a remote by URL
    sniff repo                       Show only repository/monorepo structure
    sniff repo biscuit               Filter to packages matching "biscuit"
    sniff repo !biscuit              Exclude packages matching "biscuit"
    sniff repo @sniff                Filter to packages in the "sniff" area
    sniff repo --deps                Show internal dependency list (text)
    sniff repo --deps --ui           Show internal dependency diagram (Mermaid)
    sniff repo --deps biscuit        Filtered text dependency list
    sniff repo --packages biscuit    Filtered CSV package names
    sniff language                   Show only language detection results
    sniff docs                       Show markdown documents in the repository
    sniff docs --readme              Show only README.md files
    sniff docs --plan                Show only plan-related documents
    sniff docs --src                 Show only documents under src/ directories
    sniff docs --has-prompt          Show only documents with a prompt
    sniff docs homelab               Filter documents matching "homelab"

  Programs:
    sniff programs                   Show all installed programs
    sniff editors                    Show only installed editors
    sniff editors install            Interactive install picker for editors
    sniff editors install vim        Install vim directly
    sniff utilities                  Show only installed utilities
    sniff language-package-managers  Show only language package managers
    sniff os-package-managers        Show only OS package managers
    sniff tts-clients                Show only TTS clients
    sniff terminal-apps              Show only terminal apps
    sniff audio                      Show only headless audio players
    sniff agents                     Show only AI agent CLI tools

  Services:
    sniff services              Show running services (default)
    sniff services --state all  Show all services

Output modes:
  - No subcommand: JSON output (all data)
  - With subcommand: Text output by default, use --json for JSON

Examples:
  sniff                      # Full system info as JSON
  sniff cpu                  # CPU info as text
  sniff cpu --json           # CPU info as JSON
  sniff --json cpu           # Same as above (flag position flexible)
  sniff programs             # Programs as text
  sniff programs --json      # Programs as JSON
  sniff editors install      # Interactive editor install picker
  sniff -b /path/to/repo filesystem  # Analyze specific directory
