sniff/cli/tests/snapshots/snapshots__os_json_summary.snap
---
source: sniff/cli/tests/snapshots.rs
expression: normalized_os_summary(&stdout)
---
{
  "distribution": "macos",
  "kernel": "25.5.0",
  "long_version": "macOS 26.5.1",
  "manager_count": 2,
  "name": "Darwin",
  "os_type": "MacOS",
  "version": "26.5.1"
}
