sniff/cli/tests/snapshots/snapshots__pnpm_nx_monorepo_structure_text.snap
---
source: sniff/cli/tests/snapshots.rs
expression: "normalize_snapshot_paths(&stdout, &path)"
---

Repository (pnpm Workspaces + Nx / 2 packages)

- apps
    - api v0.1.0 (apps/api)
    - web v0.1.0 (apps/web)
