sniff/cli/tests/snapshots/snapshots__structure_output.snap
---
source: sniff/cli/tests/snapshots.rs
expression: "normalize_text(&run_stdout(&[\"structure\"]))"
---
Sniff Data Structure

Structural map of the data sniff can produce. Leaf fields and values are omitted.

┌───────┬──────────────┬───────────────────────────────────────────────────────┐
│Root │ Produced By │ Top-Level Sections │
├───────┼──────────────┼───────────────────────────────────────────────────────┤
│Snif- │ detect(), │ os, hardware, network, filesystem │
│fRes- │ detect_with- │  │
│ult │ _config() │  │
│Prog- │ ProgramsInf- │ editors, utilities, language package managers, os │
│rams- │ o::detect() │ package managers, tts clients, terminal apps, │
│Info │  │ headless audio, ai clients │
│Serv- │ detect_serv- │ init system, host os, evidence, services │
│ices- │ ices() │  │
│Info │  │  │
└───────┴──────────────┴───────────────────────────────────────────────────────┘

## SniffResult
System + repository detection results.
• os
  • identity + versions
  • distribution details
  • kernel, hostname, uptime
  • system package managers
  • locale settings
  • timezone + NTP status
• hardware
  • cpu profile
  • memory stats
  • storage volumes
  • gpu devices + capabilities
• network
  • interfaces (flags + addresses)
  • primary interface selection
  • aggregated IP addresses
  • permission state
• filesystem
  • languages
    • primary language
    • per-language breakdown
    • total files analyzed
  • git
    • repo metadata (root, branches)
    • status + file changes
    • recent commits
    • remotes + tracking
    • worktrees
    • git config
  • repo
    • monorepo detection
    • package locations
    • dependencies by kind
  • formatting
    • editorconfig config
    • sections + formatting rules


## ProgramsInfo
Installed program inventories grouped by category.
• editors
• utilities
• language package managers
• os package managers
• tts clients
• terminal apps
• headless audio
• ai cli tools

Each category includes detection metadata like paths, versions, sources, and descriptions.

## ServicesInfo
Init system detection plus a service inventory.
• init system
• host os
• evidence
• services
  • name
  • pid
  • running status
  • exit/last status
