sniff/cli/tests/snapshots/snapshots__topics_table.snap
---
source: sniff/cli/tests/snapshots.rs
expression: "normalize_topics_table(&run_stdout(&[\"topics\"]))"
---
| hardware | filesystem | programs |
| --- | --- | --- |
| cpu | git | editors |
| gpu | repo | utilities |
| memory | language | language-package-managers |
| storage |  | os-package-managers |
| audio-devices |  | tts-clients |
|  |  | terminal-apps |
|  |  | audio |
|  |  | agents |
